refactor(server): cut bullshit from #1281 — fix bugs, strip theatre
Three principal-engineer subagents independently regraded the original
implementation as B−. They found two real bugs and ~165 lines of comment
theatre. This commit fixes the bugs and cuts the theatre. Net: −195 lines.

Real bugs:
- application.yml: SpringDoc nag silencer was scoped to the wrong package
  (org.springframework.core.events instead of org.springdoc.core.events).
  Silenced nothing. Verified the corrected FQN matches the springdoc-openapi
  jar.
- pom.xml: jacoco check-coverage execution was not skipped when
  skipCoverage=true. Same property, same intent — should match prepare-agent
  and report. Now consistent.
- compose.yaml: every service was tagged profiles:[minimal, full]. Per the
  Compose Spec, services in named profiles only start when that profile is
  active — so a bare `docker compose up` did nothing. Reverted to profileless
  daily-driver services. pnpm dev scripts updated accordingly.
- .mvn/maven-build-cache-config.xml: defaulting `enabled: true` ships an
  IntelliJ generate-sources NPE (MBUILDCACHE-118, still open). Reverted to
  opt-in default; CI workflows already pass `-Dmaven.build.cache.enabled=true`
  explicitly.
- JpaEntityNamingArchitectureTest used `entityClass.reflect().getAnnotation()`
  which forces full classpath load — the ArchUnit anti-pattern siblings avoid
  via `getAnnotationOfType()`. Switched to the bytecode API.
- StartupBudgetIntegrationTest extended BaseIntegrationTest + redeclared
  `@SpringBootTest` with `useMainMethod=ALWAYS`, breaking the shared context
  cache and conflicting with the base. Rewritten as standalone @SpringBootTest
  with its own @DynamicPropertySource.
- StartupBudgetIntegrationTest filtered for root-level events (whose duration
  ≈ total boot), making the 8s ceiling a coarse smoke test. Now filters for
  `spring.beans.instantiate` (per-bean) events with a 3s ceiling — catches a
  slow @PostConstruct on the bean itself, which i